Organized both CSS and HTML for easier revision

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,128 +7,126 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/favicon.png">
+</head>
   <body>
-
     <nav class="main-nav">
-        <ul class="nav">
-          <li id="page-title">About Me</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-
+      <ul class="nav-ul">
+        <li id="page-title">About Me</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <header id="about-me-header">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
       <h1 class="tag headline">About Me</h1>
       <p class="tag tagline">These are my hobbies. Click the button below each item to learn a little extra about me!</p>
     </header>
-
     <main class="flex">
-        <section class="card" id="hobbies-card">
-          <h2 id="hobbies-heading">Hobbies & Interests:</h2>
-            <section class="hobbies-list">
-                <h3 id="hobby1">Weightlifting</h3>
-                <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend and it totally changed my health--and my life! This transformation inspired me to major in Kinesiology and later, inspired me to be a personal trainer.</p>
-                <button id="more-button1">Read More</button>
-                <h3 id="hobby2">Yoga</h3>
-                <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights and it was a total gamechanger. I enjoy practicing yoga in group classes at a studio/gym <em>and</em> in solo sessions at home. My favorite yoga resource is "Yoga with Adriene" on Youtube.</p>
-                <button id="more-button2">Read More</button>
-                <h3 id="hobby3">Reading</h3>
-                <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br>
-                                                        <em>1984</em>, George Orwell<br>
-                                                        <em>The Host</em>, Stephanie Meyer<br>
-                                                        <em>The Hunger Games</em>, Suzanne Collins<br>
-                                                        <em>Animal Farm</em>, George Orwell<br>
-                                                        <em>The Giver</em>, Lois Lowry<br>
-                                                        <em>Verity</em>, Colleen Hoover<br>
-                                                        <em>Maximum Ride</em>, James Patterson<br><br>
-                                                        I'm currently reading <em>The Catcher in the Rye</em> by J.D. Salinger.<br><br>
-                                                        Next, I'd like to read Anthony Keidis' autobiography--<em>Scar Tissue</em>--and <em>It Ends With Us</em> by Colleen Hoover.<br><br>
-                                                        If you have any suggestions for my reading list, I'd love to hear them!</p>              
-                <button id="more-button3">Read More</button>
-                <h3 id="hobby4">Music</h3>
-                <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br><br>
-                                                        Here's a long list of some of my favorite musicians:<br>
-                                                        The Beatles<br>
-                                                        Led Zeppelin<br>
-                                                        Nirvana<br>
-                                                        Chevelle<br>
-                                                        Red Hot Chili Peppers<br>
-                                                        Queen<br>
-                                                        Alanis Morissette<br>
-                                                        Rod Stewart<br>
-                                                        Fuel<br>
-                                                        Foo Fighters<br>
-                                                        Matchbox Twenty<br>
-                                                        Styx<br>
-                                                        Toadies<br>
-                                                        Tool<br>
-                                                        Pearl Jam<br>
-                                                        Rage Against the Machine<br>
-                                                        Nicki Minaj<br>
-                                                        Bush<br>
-                                                        Chris Stapleton<br>
-                                                        Billy Joel<br><br>
-                                                        Do you like any of these? Which artists are YOUR favorites?</p>
-                 
-                <button id="more-button4">Read More</button>
-                <h3 id="hobby5">Movies & Television</h3>
-                <p id="hobby5info" class="hidden-info">Ahh, television.. my guilty pleasure.<br><br>
-                                                        Here's a few of my favorite movies and shows:<br>
-                                                        Friends<br>
-                                                        Breaking Bad<br>
-                                                        Stranger Things<br>
-                                                        Cop Car<br>
-                                                        Bruce Almighty<br>
-                                                        The Big Lebowski<br>
-                                                        Parasite<br>
-                                                        Fallen<br>
-                                                        Office Space<br>
-                                                        Waiting<br>
-                                                        The Hunt<br>
-                                                        Liar Liar<br>
-                                                        Elf<br>
-                                                        Fight Club<br><br>
-                                                        I also watch a lot of true crime documentaries.<br><br>
-                                                        What are some of your favorite films/series to watch?</p>
-                <button id="more-button5">Read More</button>
-                <h3 id="hobby6">Fashion</h3>
-                <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Imagine the employee discount!<br><br>
-                                                        Here's a few of my favorite brands:<br>
-                                                        Express<br>
-                                                        Nevaeh<br>
-                                                        Nike<br>
-                                                        Banana Republic<br>
-                                                        Honest Beauty<br>
-                                                        Beis<br>
-                                                        H&M<br>
-                                                        Nordstrom<br>
-                                                        Inkey List</p>
-                <button id="more-button6">Read More</button>
-                <h3 id="hobby7">Travel</h3>
-                <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including the ones I live in! I have a resolution to travel more after landing a great web development job with a stable schedule.<br><br>
-                                                        Do you enjoy traveling? How many have countries and/or states have you been to?</p>
-                <button id="more-button7">Read More</button>
-                <h3 id="hobby8">Fishing & Crabbing</h3>
-                <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat!<br><br>
-                                                        Do you have any outdoor hobbies?</p>
-                <button id="more-button8">Read More</button>
-                <h3 id="hobby9">Archery</h3>
-                <p id="hobby9info" class="hidden-info">I'm no Robin Hood, but I was gifted a bow and I am REALLY enjoying this new hobby of mine. I was surprised to find that I'm not a terrible shot.<br><br>
-                                                        Do you have any hobbies you owe to the generosity of another?</p>
-                <button id="more-button9">Read More</button>
-                <h3 id="hobby10">Photography</h3>
-                <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. I enjoy collecting photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps can be captured with such basic equipment!<br><br>
-                                                          Have you captured any shots you're proud of? If so, I'd love to see a few of your favorites!</p>
-                <button id="more-button10">Read More</button>
-                <h3 id="hobby11">Learning Languages</h3>
-                <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. Learning coding languages is exciting, too!<br><br>
-                                                        Tu parle fran&ccedil;ais? Tu parle JavaScript?</p>
-                <button id="more-button11">Read More</button>
-                </section>
-        </section>
+      <section class="card" id="hobbies-card">
+        <h2 id="hobbies-heading">Hobbies & Interests:</h2>
+        <div class="hobbies-list">
+          <h3 id="hobby1">Weightlifting</h3>
+          <p id="hobby1info" class="hidden-info">I was introduced to weightlifting by a friend and it totally changed my health--and my life! This transformation inspired me to major in Kinesiology and later, inspired me to be a personal trainer.</p>
+          <button id="more-button1">Read More</button>
+          <h3 id="hobby2">Yoga</h3>
+          <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights and it was a total gamechanger. I enjoy practicing yoga in group classes at a studio/gym <em>and</em> in solo sessions at home. My favorite yoga resource is "Yoga with Adriene" on Youtube.</p>
+          <button id="more-button2">Read More</button>
+          <h3 id="hobby3">Reading</h3>
+          <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br>
+                                                  <em>1984</em>, George Orwell<br>
+                                                  <em>The Host</em>, Stephanie Meyer<br>
+                                                  <em>The Hunger Games</em>, Suzanne Collins<br>
+                                                  <em>Animal Farm</em>, George Orwell<br>
+                                                  <em>The Giver</em>, Lois Lowry<br>
+                                                  <em>Verity</em>, Colleen Hoover<br>
+                                                  <em>Maximum Ride</em>, James Patterson<br><br>
+                                                  I'm currently reading <em>The Catcher in the Rye</em> by J.D. Salinger.<br><br>
+                                                  Next, I'd like to read Anthony Keidis' autobiography--<em>Scar Tissue</em>--and <em>It Ends With Us</em> by Colleen Hoover.<br><br>
+                                                  If you have any suggestions for my reading list, I'd love to hear them!</p>              
+          <button id="more-button3">Read More</button>
+          <h3 id="hobby4">Music</h3>
+          <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br><br>
+                                                  Here's a long list of some of my favorite musicians:<br>
+                                                  The Beatles<br>
+                                                  Led Zeppelin<br>
+                                                  Nirvana<br>
+                                                  Chevelle<br>
+                                                  Red Hot Chili Peppers<br>
+                                                  Queen<br>
+                                                  Alanis Morissette<br>
+                                                  Rod Stewart<br>
+                                                  Fuel<br>
+                                                  Foo Fighters<br>
+                                                  Matchbox Twenty<br>
+                                                  Styx<br>
+                                                  Toadies<br>
+                                                  Tool<br>
+                                                  Pearl Jam<br>
+                                                  Rage Against the Machine<br>
+                                                  Nicki Minaj<br>
+                                                  Bush<br>
+                                                  Chris Stapleton<br>
+                                                  Billy Joel<br><br>
+                                                  Do you like any of these? Which artists are YOUR favorites?</p>
+            
+          <button id="more-button4">Read More</button>
+          <h3 id="hobby5">Movies & Television</h3>
+          <p id="hobby5info" class="hidden-info">Ahh, television.. my guilty pleasure.<br><br>
+                                                  Here's a few of my favorite movies and shows:<br>
+                                                  Friends<br>
+                                                  Breaking Bad<br>
+                                                  Stranger Things<br>
+                                                  Cop Car<br>
+                                                  Bruce Almighty<br>
+                                                  The Big Lebowski<br>
+                                                  Parasite<br>
+                                                  Fallen<br>
+                                                  Office Space<br>
+                                                  Waiting<br>
+                                                  The Hunt<br>
+                                                  Liar Liar<br>
+                                                  Elf<br>
+                                                  Fight Club<br><br>
+                                                  I also watch a lot of true crime documentaries.<br><br>
+                                                  What are some of your favorite films/series to watch?</p>
+          <button id="more-button5">Read More</button>
+          <h3 id="hobby6">Fashion</h3>
+          <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Imagine the employee discount!<br><br>
+                                                  Here's a few of my favorite brands:<br>
+                                                  Express<br>
+                                                  Nevaeh<br>
+                                                  Nike<br>
+                                                  Banana Republic<br>
+                                                  Honest Beauty<br>
+                                                  Beis<br>
+                                                  H&M<br>
+                                                  Nordstrom<br>
+                                                  Inkey List</p>
+          <button id="more-button6">Read More</button>
+          <h3 id="hobby7">Travel</h3>
+          <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including the ones I live in! I have a resolution to travel more after landing a great web development job with a stable schedule.<br><br>
+                                                  Do you enjoy traveling? How many have countries and/or states have you been to?</p>
+          <button id="more-button7">Read More</button>
+          <h3 id="hobby8">Fishing & Crabbing</h3>
+          <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat!<br><br>
+                                                  Do you have any outdoor hobbies?</p>
+          <button id="more-button8">Read More</button>
+          <h3 id="hobby9">Archery</h3>
+          <p id="hobby9info" class="hidden-info">I'm no Robin Hood, but I was gifted a bow and I am REALLY enjoying this new hobby of mine. I was surprised to find that I'm not a terrible shot.<br><br>
+                                                  Do you have any hobbies you owe to the generosity of another?</p>
+          <button id="more-button9">Read More</button>
+          <h3 id="hobby10">Photography</h3>
+          <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. I enjoy collecting photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps can be captured with such basic equipment!<br><br>
+                                                    Have you captured any shots you're proud of? If so, I'd love to see a few of your favorites!</p>
+          <button id="more-button10">Read More</button>
+          <h3 id="hobby11">Learning Languages</h3>
+          <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. Learning coding languages is exciting, too!<br><br>
+                                                  Tu parle fran&ccedil;ais? Tu parle JavaScript?</p>
+          <button id="more-button11">Read More</button>
+        </div>
+      </section>
     </main>
     <footer>
       <ul>
@@ -141,4 +139,4 @@
     </footer>
     <script src="script.js"></script>
   </body>
-  </html>
+</html>
