--- a/index.html
+++ b/index.html
@@ -6,30 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  <body>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">  
+</head>
+  <body>
     <nav class="main-nav">
-        <ul class="nav">
+        <ul class="nav-ul">
           <li id="page-title">Welcome!</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-
+    </nav>
     <header id="index-header">
       <img src="images/me.jpg" alt="Victoria wearing hat, sunglasses, and camera" class="profile-image">
       <h1 class="tag headline">Hello! I’m Victoria</h1>
       <p class="tag tagline">My friends call me Vic</p>
     </header>
-
     <main class="flex">
       <section class="card">
         <h2>Background:</h2>
         <p>I’m an aspiring web developer who loves learning cool new coding tricks. Web development topics that are especially interesting to me are responsive web design, visual design for the web, and accessibility.</p>
         <p>I’ve held titles such as office assistant, bartender, and professional fitness coach. I am a life-long learner who's always trying new things and expanding my skillset. I’m excited to bring my life experience to the process of building functional and aesthetic websites.</p>
       </section> 
-
       <section class="card">
         <h2>Goals:</h2>
         <p>I want to increase my knowledge, skills, and abilities in:</p>
@@ -43,7 +42,6 @@
         <p>I want to work as a front-end developer at a local web design firm or remotely from the comfort of my own home.</p>
         <p>I'd like to be part of a team that is proud of the beautiful, dependable sites they build together.</p>
       </section> 
-
     </main>
     <footer>
       <ul>
@@ -55,4 +53,4 @@
       <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
   </body>
-  </html>
+</html>
