--- a/skills.html
+++ b/skills.html
@@ -1,69 +1,67 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Victoria Fuselier's Profile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <head>
+    <meta charset="utf-8">
+    <title>Victoria Fuselier's Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+  </head>
   <body>
-
     <nav class="main-nav">
-        <ul class="nav">
-          <li id="page-title">Skills</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-
+      <ul class="nav-ul">
+        <li id="page-title">Skills</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <header id="skills-header">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
       <h1 class="tag headline">My Skills</h1>
       <p class="tag tagline">Plus my education history and a list of some of my favorite web dev resources</p>
     </header>
-
     <main class="flex">
-        <section class="card">
-          <h2>Education:</h2>
-                <ul class="skills-page-list">
-                    <li>Lake Arthur High<br><em>Valedictorian</em></li>
-                    <li>Louisiana State University<br><em>Bachelor's in Kinesiology</em></li>
-                    <li>Free Code Camp</li>
-                    <!-- CHANGE TO GRADUATE AFTER COMPLETION -->
-                    <li>Team Treehouse<br><em>Techdegree Student</em></li>                    
-                </ul>
-        </section> 
-        <section class="card">
-          <h2>Skills:</h2>
-                <ul class="skills-page-list">
-                    <li>Typing</li>
-                    <li>Organization</li>
-                    <li>Time Management</li>
-                    <li>Professionalism</li>
-                    <li>Spelling, Grammar, & Writing</li>
-                    <li>Effective Communication</li>
-                    <li>Knack for Visual Design</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Bootstrap</li>
-                    <li>Github</li>
-                </ul>
-        </section>
-        <section class="card">
-            <h2>Resources:</h2>
-                <ul class="skills-page-list">
-                    <li>Team Treehouse</li>
-                    <li>Free Code Camp</li>
-                    <li>W3Schools</li>
-                    <li>MDN Web Docs</li>
-                    <li>Codepip</li>
-                    <li>Youtube</li>
-                </ul>
-        </section> 
+      <section class="card">
+        <h2>Education:</h2>
+          <ul class="skills-page-list">
+            <li>Lake Arthur High<br><em>Valedictorian</em></li>
+            <li>Louisiana State University<br><em>Bachelor's in Kinesiology</em></li>
+            <li>Free Code Camp</li>
+            <!-- CHANGE TO GRADUATE AFTER COMPLETION -->
+            <li>Team Treehouse<br><em>Techdegree Student</em></li>                    
+          </ul>
+      </section> 
+      <section class="card">
+        <h2>Skills:</h2>
+          <ul class="skills-page-list">
+            <li>Typing</li>
+            <li>Organization</li>
+            <li>Time Management</li>
+            <li>Professionalism</li>
+            <li>Spelling, Grammar, & Writing</li>
+            <li>Effective Communication</li>
+            <li>Knack for Visual Design</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Bootstrap</li>
+            <li>Github</li>
+          </ul>
+      </section>
+      <section class="card">
+        <h2>Resources:</h2>
+          <ul class="skills-page-list">
+            <li>Team Treehouse</li>
+            <li>Free Code Camp</li>
+            <li>W3Schools</li>
+            <li>MDN Web Docs</li>
+            <li>Codepip</li>
+            <li>Youtube</li>
+          </ul>
+      </section> 
     </main>
     <footer>
       <ul>
@@ -75,4 +73,4 @@
       <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
   </body>
-  </html>
+</html>
