--- a/contact.html
+++ b/contact.html
@@ -7,23 +7,22 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/favicon.png">
+</head>
   <body>
     <nav class="main-nav">
-        <ul class="nav">
-          <li id="page-title">Contact</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="aboutme.html">About Me</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-
+      <ul class="nav-ul">
+        <li id="page-title">Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <header id="contact-header">
       <img src="images/me2.jpg" alt="Victoria with a shoulder length haircut" class="profile-image">
       <h1 class="tag headline">Fancy a Chat?</h1>
       <p class="tag tagline">So would I!</p>
     </header>
-
     <main class="flex">
       <section class="card" id="contact-card">
         <h2>Contact Info:</h2>
@@ -49,4 +48,4 @@
       <p class="credits">V icon by <a target="_blank" href="https://icons8.com/icon/7Aa7fqWJBYRU/v">Icons8</a>; Background images courtesy of <a target="_blank" href="https://www.pexels.com/">Pexels</a></p>
     </footer>
   </body>
-  </html>
+</html>
