--- a/skills.html
+++ b/skills.html
@@ -10,13 +10,15 @@
 </head>
   <body>
     <nav class="main-nav">
-      <ul class="nav-ul">
-        <li id="page-title">Skills</li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <div id="nav-div">
+        <ul class="nav-ul">
+          <li id="page-title">Skills</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <header id="skills-header">
       <img src="images/me3.jpg" alt="Victoria standing in front of trees" class="profile-image">
