Changed some max width values on main and nav

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,13 +10,16 @@
 </head>
   <body>
     <nav class="main-nav">
-      <ul class="nav-ul">
-        <li id="page-title">About Me</li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="skills.html">Skills</a></li>
-        <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <div id="nav-div">
+        <ul class="nav-ul">
+          <li id="page-title">Skills</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     </nav>
     <header id="about-me-header">
       <img src="images/me4.png" alt="Victoria laughing with a child" class="profile-image">
