--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <nav class="main-nav">
       <div id="nav-div">
         <ul class="nav-ul">
-          <li id="page-title">Skills</li>
+          <li id="page-title">About Me</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
