--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="main-nav">
       <div id="nav-div">
         <ul class="nav-ul">
-          <li id="page-title">Skills</li>
+          <li id="page-title">Home</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="aboutme.html">About Me</a></li>
