Found error with validation tool

--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,14 @@
       <p class="tag tagline">So would I!</p>
     </header>
     <main class="flex" id="contact-main">
-      <section class="card" class="contact-card">
+      <section class="card">
         <h2>Contact Info:</h2>
         <ul class="contact-list">
           <li>(000)000-0000</li>
           <li>example@gmail.com</li>
         </ul>
       </section>
-      <section class="card" class="contact-card">
+      <section class="card">
         <h2 id="contact-list-spacing">Social Media:</h2>
         <ul class="contact-list">
           <li>Follow me on <a class="social-link" href="https://twitter.com/viktooreuh" target="_blank">Twitter</a></li>
