Styling nav bar and editing text content

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,21 +37,21 @@
           <p id="hobby2info" class="hidden-info">I discovered yoga shortly after I began lifting weights and it was a total gamechanger. I enjoy practicing yoga in group classes at a studio/gym <em>and</em> in solo sessions at home. My favorite yoga resource is "Yoga with Adriene" on Youtube.</p>
           <button id="more-button2">Read More</button>
           <h3 id="hobby3">Reading</h3>
-          <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br>
+          <p id="hobby3info" class="hidden-info">Here's a few of my favorite books so far:<br><br>
                                                   <em>1984</em>, George Orwell<br>
                                                   <em>The Host</em>, Stephanie Meyer<br>
                                                   <em>The Hunger Games</em>, Suzanne Collins<br>
                                                   <em>Animal Farm</em>, George Orwell<br>
                                                   <em>The Giver</em>, Lois Lowry<br>
                                                   <em>Verity</em>, Colleen Hoover<br>
-                                                  <em>Maximum Ride</em>, James Patterson<br><br>
-                                                  I'm currently reading <em>The Catcher in the Rye</em> by J.D. Salinger.<br><br>
-                                                  Next, I'd like to read Anthony Keidis' autobiography--<em>Scar Tissue</em>--and <em>It Ends With Us</em> by Colleen Hoover.<br><br>
+                                                  <em>Maximum Ride</em>, James Patterson<br>
+                                                  <em>The Housemaid</em>, Freida McFadden<br>
+                                                  <em>And Then There Were None</em>, Agatha Christie<br><br>
                                                   If you have any suggestions for my reading list, I'd love to hear them!</p>              
           <button id="more-button3">Read More</button>
           <h3 id="hobby4">Music</h3>
-          <p id="hobby4info" class="hidden-info">I'm really into music and have so many favorites, it's hard to name just a few, so...<br><br>
-                                                  Here's a long list of some of my favorite musicians:<br>
+          <p id="hobby4info" class="hidden-info">It's hard to name just a few, so...<br><br>
+                                                  Here's a long list of some of my favorite musicians:<br><br>
                                                   The Beatles<br>
                                                   Led Zeppelin<br>
                                                   Nirvana<br>
@@ -82,6 +82,10 @@
                                                   Breaking Bad<br>
                                                   Stranger Things<br>
                                                   Cop Car<br>
+                                                  Bluey<br>
+                                                  Ozark<br>
+                                                  The Secret Life of Pets<br>
+                                                  Toy Story<br>
                                                   Bruce Almighty<br>
                                                   The Big Lebowski<br>
                                                   Parasite<br>
@@ -96,24 +100,25 @@
                                                   What are some of your favorite films/series to watch?</p>
           <button id="more-button5">Read More</button>
           <h3 id="hobby6">Fashion</h3>
-          <p id="hobby6info" class="hidden-info">I love talking fashion (as well as clean skincare and beauty products) and would love to work on websites for one of my favorite companies one day. Imagine the employee discount!<br><br>
+          <p id="hobby6info" class="hidden-info">I love talking fashion, skincare, and makeup and would love to work on websites for one of my favorite companies one day. Imagine the employee discount!<br><br>
                                                   Here's a few of my favorite brands:<br>
                                                   Express<br>
                                                   Nevaeh<br>
+                                                  Love, Bonito<br>
                                                   Nike<br>
                                                   Banana Republic<br>
-                                                  Honest Beauty<br>
                                                   Beis<br>
                                                   H&M<br>
                                                   Nordstrom<br>
-                                                  Inkey List</p>
+                                                  Honest Beauty<br>
+                                                  The Ordinary</p>
           <button id="more-button6">Read More</button>
           <h3 id="hobby7">Travel</h3>
           <p id="hobby7info" class="hidden-info">I've been to 2 countries and 13 states--not including the ones I live in! I have a resolution to travel more after landing a great web development job with a stable schedule.<br><br>
-                                                  Do you enjoy traveling? How many have countries and/or states have you been to?</p>
+                                                  Do you enjoy traveling? What was your most memorable getaway?</p>
           <button id="more-button7">Read More</button>
           <h3 id="hobby8">Fishing & Crabbing</h3>
-          <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing and crabbing--and even some waterskiing and wakeboarding--outings on my dad's boat!<br><br>
+          <p id="hobby8info" class="hidden-info">Some call Gueydan, LA "The Duck Hunting Capital of the World" or "Sportsman's Paradise". I just call it home! I've always enjoyed fishing, crabbing, waterskiing, and wakeboarding outings on my dad's boat!<br><br>
                                                   Do you have any outdoor hobbies?</p>
           <button id="more-button8">Read More</button>
           <h3 id="hobby9">Archery</h3>
@@ -121,11 +126,11 @@
                                                   Do you have any hobbies you owe to the generosity of another?</p>
           <button id="more-button9">Read More</button>
           <h3 id="hobby10">Photography</h3>
-          <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. I enjoy collecting photos of all kinds of subjects. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps can be captured with such basic equipment!<br><br>
+          <p id="hobby10info" class="hidden-info">I'm no professional, but I sure do enjoy this hobby. It seems that I take, store, and print more photos than the average person, which is why I consider it a hobby of mine. I use an instant-print Polaroid camera and my good ole iPhone camera; I'm often surprised to see what kind of beautiful snaps can be captured with such basic equipment!<br><br>
                                                     Have you captured any shots you're proud of? If so, I'd love to see a few of your favorites!</p>
           <button id="more-button10">Read More</button>
           <h3 id="hobby11">Learning Languages</h3>
-          <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. Learning coding languages is exciting, too!<br><br>
+          <p id="hobby11info" class="hidden-info">I've taken basic courses in both ASL and French, and wow--I really enjoy learning these. I highly recommend the free Duolingo app. Learning coding languages is exciting, too!<br><br>
                                                   Tu parle fran&ccedil;ais? Tu parle JavaScript?</p>
           <button id="more-button11">Read More</button>
         </div>
